tests/linear/linear-non-001/expected
# Example Non-Linearly Wired Circuits
Wire  has an unused entry.
## Circuits
```
// LOG : Starting Linear NetList 
// LOG : Parsing Successful
../../shared/linear-non/MissingInputs.sv:6:0-0: Linearity Error:
ab := [USED, USED, FREE]

```
## Verilator
```
%Warning-UNUSEDSIGNAL: ../../shared/linear-non/MissingInputs.sv:2:35: Bits of signal are not used: 'ab'[2]
                                                                    : ... In instance MissingInputs
    2 |               , input  logic[2:0] ab
      |                                   ^~
                       ... For warning description see https://verilator.org/warn/UNUSEDSIGNAL?v=5.002
                       ... Use "/* verilator lint_off UNUSEDSIGNAL */" and lint_on around source to disable this message.
%Error: Exiting due to 1 warning(s)
```
